Completed logic for single player improved code readablity and some minor fixes

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
 
 .home-page-nav-links {
   font-size: 1.7rem;
+  margin: 5px 0;
   color: #fffaff;
 }
 
@@ -22,21 +23,22 @@
 .game-title {
   text-align: center;
   font-size: 2.5rem;
-  margin: 25px 0;
+  margin: 7vh 0;
 }
 
 .score-boards {
   font-size: 1rem;
-  margin: 18px 0;
+  margin: 13px 0;
 }
 
 #result {
   font-size: 2rem;
-  margin: 21px 0;
+  text-align: center;
+  margin: 18px 0;
 }
 
 .options-box {
-  margin: 28px 0;
+  margin: 18px 0;
 }
 
 .choice-image {
@@ -61,16 +63,30 @@
 }
 
 #send-chat-message {
-  width: 74%;
+  height: 36px;
+  width: 75%;
 }
 
 .chat-button {
-  height: 42px;
+  height: 36px;
   background: #fffaff;
-  width: 13%;
+  width: 10%;
   color: #0e0f19;
   outline: none;
   border: 1px solid #0e0f19;
 }
 
+#send-chat-button {
+  width: 15%;
+}
+
 /* Styled game page */
+
+/*  */
+.ask-game-type {
+  height: 100vh;
+  width: 100vw;
+  background: red;
+}
+
+/*  */
